Fix horizontal scrolling on narrow screens while swiping

--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
+    overflow-x: hidden;
 
     display: flex;
     justify-content: center;
